work on main activity started' '

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">VinChou</string>
+    <string name="my_wich">For your birthday my love</string>
+    <string name="by">by nathan lopez kazaku</string>
 </resources>
